--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "nestjs-mastery-100days",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Peyman Ahmadi",
   "private": true,
   "license": "UNLICENSED",
+  "workspaces": [
+    "apps/*"
+  ],
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "start:day-01": "nest start day-01-users-module",
+    "start:dev:day-01": "nest start day-01-users-module --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/nestjs-mastery-100days/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -23,6 +28,9 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
