feat: implement interceptor for auth and users

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "start:dev:day-01": "nest start day-01-users-module --watch",
     "start:day-02": "nest start day-02-auth-module",
     "start:dev:day-02": "nest start day-02-auth-module --watch",
+    "start:day-03": "nest start day-03-observability",
+    "start:dev:day-03": "nest start day-03-observability --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/nestjs-mastery-100days/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --config ./jest.config.ts",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
