--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,11 @@
     "strictBindCallApply": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@app/shared": [
-        "libs/shared/src"
-      ],
-      "@app/shared/*": [
-        "libs/shared/src/*"
-      ]
+      "@app/shared": ["libs/shared/src"],
+      "@app/shared/*": ["libs/shared/src/*"],
+      "@day-01-users/*": ["apps/day-01-users-module/src/*"],
+      "@day-02-auth/*": ["apps/day-02-auth-module/src/*"],
+      "@day-03-observability/*": ["apps/day-03-observability/src/*"]
     }
   }
 }
