--- a/apps/day-03-observability/tsconfig.app.json
+++ b/apps/day-03-observability/tsconfig.app.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/day-03-observability"
+    "outDir": "../../dist/apps/day-03-observability",
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
