--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "@app/shared/*": ["libs/shared/src/*"],
       "@day-01-users/*": ["apps/day-01-users-module/src/*"],
       "@day-02-auth/*": ["apps/day-02-auth-module/src/*"],
-      "@day-03-observability/*": ["apps/day-03-observability/src/*"]
+      "@day-03-observability/*": ["apps/day-03-observability/src/*"],
+      "@day-04-auth-guards/*": ["apps/day-04-auth-guards/src/*"]
     }
   }
 }
