--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "start:dev:day-03": "nest start day-03-observability --watch",
     "start:day-04": "nest start day-04-auth-guards",
     "start:dev:day-04": "nest start day-04-auth-guards --watch",
+    "start:day-05": "nest start day-05-rbac",
+    "start:dev:day-05": "nest start day-05-rbac --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/nestjs-mastery-100days/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
